--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/moment-duration-format": "^2.2.2",
     "babel-loader": "^8.0.4",
+    "moment": "^2.23.0",
+    "moment-duration-format": "^2.2.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
