Port everything over to Ubuntu

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,17 @@ default: &default
 
 development:
   <<: *default
-  database: SoundCloud-Clone_development
+  database: Hi-Pass_development
+  host: localhost
+  port: 5432 # or 5433, or whatever port number you chose when installing postgres
+  username: postgres
+  password: password
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: SoundCloud-Clone
+  #username: Hi-Pass
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +61,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: SoundCloud-Clone_test
+  database: Hi-Pass_test
+  host: localhost
+  port: 5432 # or 5433, or whatever port number you chose when installing postgres
+  username: postgres
+  password: password
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +88,6 @@ test:
 #
 production:
   <<: *default
-  database: SoundCloud-Clone_production
-  username: SoundCloud-Clone
-  password: <%= ENV['SOUNDCLOUD-CLONE_DATABASE_PASSWORD'] %>
+  database: Hi-Pass_production
+  username: Hi-Pass
+  password: <%= ENV['HI-PASS_DATABASE_PASSWORD'] %>
