--- a/config/database.yml
+++ b/config/database.yml
@@ -24,10 +24,10 @@ default: &default
 development:
   <<: *default
   database: Hi-Pass_development
-  host: localhost
-  port: 5432 # or 5433, or whatever port number you chose when installing postgres
-  username: postgres
-  password: password
+  # host: localhost
+  # port: 5432 # or 5433, or whatever port number you chose when installing postgres
+  # username: postgres
+  # password: password
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -62,10 +62,10 @@ development:
 test:
   <<: *default
   database: Hi-Pass_test
-  host: localhost
-  port: 5432 # or 5433, or whatever port number you chose when installing postgres
-  username: postgres
-  password: password
+  # host: localhost
+  # port: 5432 # or 5433, or whatever port number you chose when installing postgres
+  # username: postgres
+  # password: password
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
